# wordle-search

./: .clang-format  CMakeLists.txt  README.md
src/: def.h  hint.cpp  hint.h  main.cc  word.cpp  word.h  words.h
wordgen/: format_words.py
